<resources>
    <string name="app_name">EyeShield</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_number">Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="dialogTitle">REGISTRATION ERROR</string>
    <string name="dialogMessage">Email already exists</string>
    <string name="signinerrormsg">Incorrect Email or Password</string>
    <string name="signinerrortitle">Signin Error</string>
    <string name="title_cart">Your Cart</string>
    <string name="title_register">Register</string>
    <string name="title_product_detail">Product Details</string>
    <string name="title_settings">Settings</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_orders">Orders</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_shipping">Shipping</string>
    <string name="title_shipping_add">Shipping Address</string>
    <string name="title_confirm_payment">Confirm</string>
    <string name="title_review_details">Customer Reviews</string>
    <string name="title_about_us">About Us</string>
    <string name="title_order_complete">Order Complete</string>
    <string name="facebook_app_id">666725170406921</string>
    <string name="fb_login_protocol_scheme">fb171811327066629</string>
    <string name="qeasy_notification">Qeasy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_epsam">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
        Aperiam eaque ipsa quae ab illo inventore veritatis.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="register_terms_writing">By registering you agree that you have read and accepted our Terms and Conditions</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="shipping_top_text">Which shipping parter do you like?</string>
    <string name="shipping_dhl">DHL</string>
    <string name="shipping_ups">UPS</string>
    <string name="shipping_fedex">FEDEX</string>
    <string name="shipping_cost_dhl">No additional cost</string>
    <string name="shipping_cost_fedex">Additional cost $20</string>
    <string name="payment_top_text">How do you wish to pay?</string>
    <string name="payment_creditcard">Credit Card</string>
    <string name="payment_paypal">Paypal</string>
    <string name="payment_master_card">Master Card</string>
    <string name="payment_info_card_no">Credit Card No</string>
    <string name="payment_info_expiration">Expires</string>
    <string name="payment_info_cvv">CVV-CODE</string>
    <string name="payment_finish_order">Pay with Paypal/Credit Card</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="confirm_name">Name : John Doe</string>
    <string name="confirm_address">Address : John doe\'s address</string>
    <string name="confirm_city">City : Khulna</string>
    <string name="confirm_zip">Zip: 9000</string>
    <string name="confirm_country">Country: Bangladesh</string>
    <string name="confirm_sipping_company">Shipping With : FedEx</string>
    <string name="payment_method">Payment Method : Paypal</string>
    <string name="confirm_payment_card_no">Card No : 343432334</string>
    <string name="confirm_payment_expires">Exp : 23 Jan, 2020</string>
    <string name="confirm_payment_cvv">CVV : 2334</string>
    <string name="category">Category</string>
    <string name="all_category">All Category</string>
    <string name="my_favorites">My Favorites</string>
    <string name="popular_product">Popular Products</string>
    <string name="recent_product">Recent Products</string>
    <string name="feature_product">Feature Products</string>
    <string name="offer_product">Offer Products</string>
    <string name="search_hint">Search a item</string>
    <string name="womens_product">Women"'"s Product</string>
    <string name="womens_bags">Womens"'"s Bags</string>
    <string name="womens_dress">Womens"'"s Dress</string>
    <string name="mens_product">Men"'"s Product</string>
    <string name="mens_watches">Men"'"s Watches</string>
    <string name="mens_shoes">Men"'"s Shoes</string>
    <string name="action_skip">Skip</string>
    <string name="read_more">READ MORE</string>
    <string name="read_less">READ LESS</string>
    <string name="input_first_name">First Name</string>
    <string name="input_last_name">Last Name</string>
    <string name="input_address_1">Address Line 1</string>
    <string name="input_address_2">Address Line 2</string>
    <string name="input_city">City</string>
    <string name="input_zip">Zip Code</string>
    <string name="input_state">State</string>
    <string name="input_country">Country</string>
    <string name="btn_next">Next Step</string>
    <string name="btn_update">Update</string>
    <string name="btn_create_account">Create Account</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_register">Register</string>
    <string name="btn_sign_in_with_email">Sign in With Email</string>
    <string name="btn_sign_in_with_google">Sign in With Gmail</string>
    <string name="btn_sign_in_with_facebook">Sign in With Facebook</string>
    <string name="btn_add_to_cart">Add to Cart</string>
    <string name="dont_hv_account">Don\'t have an account?</string>
    <string name="already_hv_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="my_orders">My Orders</string>
    <string name="my_favourites">My Favourites</string>
    <string name="my_shipping_address">My Shipping Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="save_address">Save Address</string>
    <string name="confirm_address_heading">Payment Info</string>
    <string name="string_login">Login</string>
    <string name="string_logout">Logout</string>
    <string name="login_header">To take all the advantages of this app \n you should log in.</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="resend_code">Resend Code?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_underline"><u>Sign In</u></string>
    <string name="we_will_send_you_a_code_to_log_in">We will send you a code you can use to log in</string>
    <string name="please_enter_your_valid_email">Please enter your valid email*</string>
    <string name="continues">Continue</string>
    <string name="name_yourdomain_cim">name@yourdomain.com</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_account_has_been_activated">Your account has been activated.</string>
    <string name="fiil_field">Please fill the input field!</string>
    <string name="password_mismatch">Password mismatch!</string>
    <string name="no_space">Space is not allowed!</string>
    <string name="need_6_char">Require 6"-"20 characters!</string>
    <string name="valid_email">Enter valid email!</string>
    <string name="need_2_char">Require 2"-"20 characters!</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="check_input_field">Please check the input field!</string>
    <string name="sign_up">Sign Up</string>
    <string name="digit_4_pic_text">We sent a 4-digit code to your email address</string>
    <string name="already_have_a_code">Already have a code!</string>
    <string name="please_enter_email_that_you_used">Please enter email that you used for sign up</string>
    <string name="please_enter_valid_pin_code">Please enter valid pin code</string>
    <string name="new_password_text">You will use this password to \n access your account.</string>
    <string name="enter_the_code_we_sent_to">Enter the code we sent to</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_details_title">Product Details</string>
    <string name="product_id">Product ID :</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="image_is_corrupted">Image is corrupted!</string>
    <string name="photo_title">Add Photo!</string>
    <string name="select_file">Select File</string>
    <string name="color_product_id">Product ID : <font color='#218B95'>%s</font></string>
    <string name="color_product_name">Product Name : <font color='#218B95'>%s</font></string>
    <string name="color_product_details">Product ID : <font color='#218B95'>%s</font></string>
    <string name="user">User</string>
    <string name="profile">Profile</string>
    <string name="multipart">multipart/form-data</string>
    <string name="partbody">text/plain</string>
    <string name="no_products_found">No products Found</string>
    <string name="toast_please_add_rating">Please Add Rating</string>
    <string name="rating_dialog_hated_it">Hated it</string>
    <string name="rating_dialog_disliked_it">Disliked it</string>
    <string name="rating_dialog_it_okay">It\'s ok</string>
    <string name="rating_dialog_liked_it">Liked it</string>
    <string name="rating_dialog_love_it">Love it</string>
    <string name="order_id">Tax :&#160;</string>
    <string name="order_method">Order Method :&#160;</string>
</resources>